Outliner F2 renaiming problem #82553

Closed
opened 2020-11-09 22:12:53 +01:00 by Georg K · 7 comments

System Information
Operating system: Linux-5.9.3-1-MANJARO-x86_64-with-glibc2.2.5 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.9.3-1-MANJARO, LLVM 10.0.1) X.Org 4.5 (Core Profile) Mesa 20.2.1

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-05 13:54, hash: cba6b4f4a1
Worked: (newest version of Blender that worked as expected)

Short description of error
If F2 is used in the outliner to rename an object that is not currently displayed because the list is longer than the visible editor area, then

  • scrolling will be restricted (usually, if the object to be renamed is in view, this prevents scrolling away without finishing the rename operation)
  • renaming by typing and confirming with Enter is not possible (you have to escape, scroll to the object and use F2 again)
  • other shortcuts like A and H are still active instead of being handled as text input

Exact steps for others to reproduce the error
Duplicate the standard cube at least 20 times until the visible area of the outliner is filled and the last, active cube is out of view.
Move the mouse to the outliner and press F2 to rename the active cube
Now

  • try scrolling down: it is impossible to scroll down all the way to the active cube, once you are down as far as possible, it is no longer possible to go up unless ESC is pressed
  • try blind renaming by typing and pressing Enter - it won't work and Enter won't exit the renaming mode (scrolling and pressing Enter does, typing a new name is not possible because shortcuts are still active and input is not used for renaming)
**System Information** Operating system: Linux-5.9.3-1-MANJARO-x86_64-with-glibc2.2.5 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.9.3-1-MANJARO, LLVM 10.0.1) X.Org 4.5 (Core Profile) Mesa 20.2.1 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-05 13:54, hash: `cba6b4f4a1` Worked: (newest version of Blender that worked as expected) **Short description of error** If F2 is used in the outliner to rename an object that is not currently displayed because the list is longer than the visible editor area, then - scrolling will be restricted (usually, if the object to be renamed is in view, this prevents scrolling away without finishing the rename operation) - renaming by typing and confirming with Enter is not possible (you have to escape, scroll to the object and use F2 again) - other shortcuts like A and H are still active instead of being handled as text input **Exact steps for others to reproduce the error** Duplicate the standard cube at least 20 times until the visible area of the outliner is filled and the last, active cube is out of view. Move the mouse to the outliner and press F2 to rename the active cube Now - try scrolling down: it is impossible to scroll down all the way to the active cube, once you are down as far as possible, it is no longer possible to go up unless ESC is pressed - try blind renaming by typing and pressing Enter - it won't work and Enter won't exit the renaming mode (scrolling and pressing Enter does, typing a new name is not possible because shortcuts are still active and input is not used for renaming)
Author

Added subscriber: @georgK

Added subscriber: @georgK
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-11-10 10:15:42 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Maybe we should just force it into view prior? Will post a Diff shortly

Can confirm. Maybe we should just force it into view prior? Will post a Diff shortly

This issue was referenced by 7ba971d6d8

This issue was referenced by 7ba971d6d855034d5a8f0e8dab1bcd892b5aabd3

This issue was referenced by 2d48f3e445

This issue was referenced by 2d48f3e445ad4294cfe1a354629bf335117ba40d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82553
No description provided.